[gd_scene load_steps=40 format=3 uid="uid://ud5shvanfk22"]

[ext_resource type="Script" path="res://pages/inspiration/inspiration.gd" id="1_vc22h"]
[ext_resource type="Theme" uid="uid://cbra74d4qris6" path="res://assets/theme/default.tres" id="1_xad1q"]
[ext_resource type="Texture2D" uid="uid://cgpplkgp4ywqr" path="res://assets/icons/井号.png" id="2_00mcv"]
[ext_resource type="Script" path="res://pages/inspiration/inspiration_memo_resource.gd" id="2_cojst"]
[ext_resource type="Texture2D" uid="uid://bykn1q5iawir5" path="res://assets/icons/加2.png" id="2_fac0p"]
[ext_resource type="Texture2D" uid="uid://tj55qm8vhwy2" path="res://assets/icons/文件.png" id="3_n0byc"]
[ext_resource type="Texture2D" uid="uid://bgejivkkk3417" path="res://assets/icons/hash井号.png" id="3_r2aai"]
[ext_resource type="Texture2D" uid="uid://cq3ouxd1nyihl" path="res://assets/icons/链接.png" id="4_khwdh"]
[ext_resource type="Texture2D" uid="uid://bipe86fxjm208" path="res://assets/icons/保存.png" id="5_8oovn"]
[ext_resource type="Texture2D" uid="uid://me0fm7jrv4dh" path="res://assets/icons/trashcan回收站.png" id="5_22m40"]
[ext_resource type="Texture2D" uid="uid://0b8rhtxj0cff" path="res://assets/icons/取消框.png" id="5_eidfg"]
[ext_resource type="FontFile" uid="uid://bqeanl0rvmlbo" path="res://assets/fonts/SourceHanSerif-VF.otf.ttc" id="6_ab4m2"]
[ext_resource type="Texture2D" uid="uid://bhtw8jfbip3bx" path="res://assets/icons/引用链接.png" id="13_50x7e"]

[sub_resource type="Resource" id="Resource_7rv1f"]
script = ExtResource("2_cojst")
id = ""
content = ""
book_id = ""
tag = ""
date = {}
linkout = Array[String]([])
linkin = Array[String]([])
file_path = Array[String]([])

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp1k4"]
content_margin_left = 50.0
content_margin_top = 40.0
content_margin_right = 50.0
content_margin_bottom = 40.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.733333, 0.733333, 0.733333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbm7i"]
bg_color = Color(0.733333, 0.733333, 0.733333, 1)
border_width_top = 1
border_color = Color(0.733333, 0.733333, 0.733333, 0.313726)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3u1tt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkfi4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_53twy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ljot"]
bg_color = Color(0.882353, 0.831373, 0.741176, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3axy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ojdp"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.733333, 0.733333, 0.733333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oef1n"]
content_margin_left = 15.0
content_margin_top = 10.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csf4b"]
bg_color = Color(0.933333, 0.952941, 0.996078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sth6a"]
bg_color = Color(0.933333, 0.952941, 0.996078, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.376471, 0.541176, 0.968627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxhb0"]
bg_color = Color(0.933333, 0.952941, 0.996078, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.376471, 0.541176, 0.968627, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oko0v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v5fl6"]
bg_color = Color(0.933333, 0.952941, 0.996078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rqp7"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m8tj8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3om8t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kb6xp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_phrup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r20rq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jxb6"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.733333, 0.733333, 0.733333, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.733333, 0.733333, 0.733333, 0.313726)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qucpw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_illpe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxrx4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7lf2r"]

[node name="Inspiration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vc22h")
memoEn = SubResource("Resource_7rv1f")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lp1k4")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GridContainer" type="GridContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
columns = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="memo_num_label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_font_sizes/font_size = 40
text = "422"
horizontal_alignment = 3
vertical_alignment = 3

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_xad1q")
theme_override_font_sizes/font_size = 40
text = "Memo "
horizontal_alignment = 3
vertical_alignment = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="tag_num_label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_font_sizes/font_size = 40
text = "40"

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_xad1q")
theme_override_font_sizes/font_size = 40
text = "Tag   "
horizontal_alignment = 3
vertical_alignment = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="day_num_label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_font_sizes/font_size = 40
text = "408"

[node name="Label4" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/GridContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_xad1q")
theme_override_font_sizes/font_size = 40
text = "Day   "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_nbm7i")

[node name="month_container" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_nbm7i")

[node name="Label2" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(0.882353, 0.831373, 0.741176, 1)
theme_override_font_sizes/font_size = 40
text = "标签"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3u1tt")

[node name="tag_tree_lucky" type="Tree" parent="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_xad1q")
hide_root = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="tag_add_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "选择标签后点击添加为其子节点"
theme = ExtResource("1_xad1q")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkfi4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_53twy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2ljot")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d3axy")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/tag_add_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fac0p")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_xad1q")
texture = ExtResource("3_r2aai")
expand_mode = 1

[node name="tag_edit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(1, 0.843137, 0.25098, 1)
theme_override_fonts/font = ExtResource("6_ab4m2")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0ojdp")
placeholder_text = "新标签"
max_length = 12
expand_to_text_length = true

[node name="inspiration_tag_added_error" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(0.976471, 0.862745, 0.360784, 1)
theme_override_font_sizes/font_size = 23
text = "新标签不能为空"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="tag_del_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "选择标签后点击进行删除，而且会删除memo中相应标签"
theme = ExtResource("1_xad1q")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkfi4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_53twy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2ljot")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d3axy")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/tag_del_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_22m40")
expand_mode = 1

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(0.631373, 0.631373, 0.631373, 1)
theme_override_font_sizes/font_size = 25
text = "       回收站"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(0.882353, 0.831373, 0.741176, 1)
theme_override_font_sizes/font_size = 40
text = "Memo"
vertical_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oef1n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="inspiration_tag_container" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="tag_add_button_top" type="MenuButton" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/inspiration_tag_container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(0.376471, 0.541176, 0.968627, 1)
theme_override_colors/font_pressed_color = Color(0.376471, 0.541176, 0.968627, 1)
theme_override_colors/font_hover_color = Color(0.376471, 0.541176, 0.968627, 1)
theme_override_colors/font_focus_color = Color(0.376471, 0.541176, 0.968627, 1)
theme_override_fonts/font = ExtResource("6_ab4m2")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_csf4b")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sth6a")
theme_override_styles/hover = SubResource("StyleBoxFlat_sxhb0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oko0v")
theme_override_styles/focus = SubResource("StyleBoxFlat_v5fl6")
text = "#"
item_count = 2
popup/item_0/text = "修改"
popup/item_0/id = 0
popup/item_1/text = "删除"
popup/item_1/id = 1

[node name="popup_menu_tag_tree" type="PanelContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_xad1q")
theme_override_styles/panel = SubResource("StyleBoxFlat_1rqp7")

[node name="popup_tag_tree" type="Tree" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/popup_menu_tag_tree"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.631373, 0.631373, 0.631373, 1)
theme_override_colors/font_selected_color = Color(1, 0.843137, 0.25098, 1)
theme_override_fonts/title_button_font = ExtResource("6_ab4m2")
theme_override_fonts/font = ExtResource("6_ab4m2")
theme_override_font_sizes/font_size = 25
theme_override_styles/panel = SubResource("StyleBoxEmpty_m8tj8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3om8t")
allow_rmb_select = true
hide_root = true

[node name="memo" type="TextEdit" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/background_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_kb6xp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_phrup")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_r20rq")
wrap_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 17

[node name="inspiration_tag_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "点击后选择标签"
theme = ExtResource("1_xad1q")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_tag_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_00mcv")
expand_mode = 1

[node name="inspiration_link_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "点击后选择链接"
theme = ExtResource("1_xad1q")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_link_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_khwdh")
expand_mode = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_xad1q")
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_4jxb6")

[node name="inspiration_file_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(37, 37)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "点击后选择文件"
theme = ExtResource("1_xad1q")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_file_button"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_n0byc")
expand_mode = 1

[node name="SelectFileDialog_Inspiration" type="FileDialog" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_file_button"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(800, 600)
ok_button_text = "打开"
file_mode = 0
access = 2
root_subfolder = "\\Users\\Rachel"
show_hidden_files = true
use_native_dialog = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="memo_related_file_container" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 17

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_constants/separation = 17

[node name="inspiration_memo_added_error" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_xad1q")
theme_override_colors/font_color = Color(1, 0.843137, 0.25098, 1)
theme_override_font_sizes/font_size = 25
text = "memo内容不能为空"

[node name="inspiration_cancel_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(77.964, 37)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
tooltip_text = "点击后清空memo"
theme = ExtResource("1_xad1q")
theme_override_styles/normal = SubResource("StyleBoxFlat_qucpw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_illpe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uxrx4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7lf2r")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/inspiration_cancel_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_eidfg")
expand_mode = 3

[node name="inspiration_add_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(77.964, 37)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
tooltip_text = "点击后保存memo"
theme = ExtResource("1_xad1q")
theme_override_styles/normal = SubResource("StyleBoxFlat_qucpw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_illpe")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uxrx4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7lf2r")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/inspiration_add_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8oovn")
expand_mode = 3

[node name="inspiration_link_container" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="link_out_button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/inspiration_link_container"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(43, 43)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "点击后可以看见所有被这个memo链接的memo"
theme = ExtResource("1_xad1q")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/inspiration_link_container/link_out_button"]
custom_minimum_size = Vector2(43, 43)
layout_mode = 1
offset_right = 43.0
offset_bottom = 43.0
texture = ExtResource("13_50x7e")
expand_mode = 1

[node name="link_out_vbox_container" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/inspiration_link_container"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="memo_VBcontainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="item_selected" from="PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2/tag_tree_lucky" to="." method="_on_tag_tree_lucky_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/tag_add_button" to="." method="_on_tag_add_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2/tag_del_button" to="." method="_on_tag_del_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/inspiration_tag_container/tag_add_button_top" to="." method="_on_tag_add_button_top_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/popup_menu_tag_tree/popup_tag_tree" to="." method="_on_popup_tag_tree_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_tag_button" to="." method="_on_inspiration_tag_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_link_button" to="." method="_on_inspiration_link_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_file_button" to="." method="_on_inspiration_file_button_pressed"]
[connection signal="file_selected" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/inspiration_file_button/SelectFileDialog_Inspiration" to="." method="_on_select_file_dialog_inspiration_file_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/inspiration_cancel_button" to="." method="_on_inspiration_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/inspiration_add_button" to="." method="_on_inspiration_add_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer2/PanelContainer/VBoxContainer/inspiration_link_container/link_out_button" to="." method="_on_link_out_button_pressed"]
